# LangChain

./: README.md
LangChain/: pyproject.toml  requirements.txt
LangChain/1-DataIngestion/: 1-DataIngestion_techniques.ipynb
LangChain/2-DataTransformer/: 2.1-RecursiveCharacterTextSplitter.ipynb  2.2-CharacterTextSplitter.ipynb  2.3-HTML_Splitter.ipynb  2.4-Json_Splitter.ipynb
LangChain/3-Embeddings/: huggingface_embeddings.ipynb  openaiembeddings.ipynb  speech.txt
LangChain/4-VectorStores/: 4-1.FAISS.ipynb  4-2.Chroma.ipynb
LangChain/4-VectorStores/chroma_db/: chroma.sqlite3
LangChain/4-VectorStores/faiss_index/: index.faiss  index.pkl
LangChain/5-Langchain-GenAIApp/: 5-1.GettingStarted_with_langchain.ipynb  5-2.SimpleApp.ipynb
LangChain/6-LLMAPP-Using-LCEL/: 6-1.SimpleLLMLCEL.ipynb  serve.py
LangChain/7-ChatBot/: 7.1-ChatBots.ipynb  7.2-VectorStores_Retrievers.ipynb
